--- a/news-homepage-main/style.css
+++ b/news-homepage-main/style.css
@@ -33,9 +33,11 @@ li{
 _
 /* header */
 header{
-    margin: 50px 0;
+    /* margin: 50px 0;  */
+    border: solid 1px #000; 
 }
 header nav{
+    margin: 50px 0; 
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -75,6 +77,7 @@ main{
     font-size: 60px;
     color: rgb(0, 0, 26);
     line-height: 3.5rem;
+    width: 50%;
 }
 .p-btn{
     display: flex;
@@ -167,11 +170,13 @@ picture img{
     }
     .mobile-header{
         display: block;
+        margin: 20px 0;
     }
     .mobile-header nav{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
     }
 
 
@@ -194,6 +199,7 @@ picture img{
     font-size: 40px;
     color: rgb(0, 0, 26);
     line-height: 2.5rem;
+    width: 100%;
     }
     .p-btn p{
         font-size: 14px;
@@ -207,5 +213,38 @@ picture img{
     gap: 30px;
     width: 100%;
     margin: 50px 0px;
+    }
+    .new div h2{
+    color: rgb(197, 198, 206);
+    font-size: 25px;
+    font-weight:normal;
+    }
+.new div p{
+    line-height: 20px;
+    color: rgb(93, 95, 121);
+    }
+.div-content{
+    position: fixed;
+    background-color: rgb(255, 253, 250);
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 70%;
+    padding: 30px;
+    z-index: 1;
+    visibility: hidden;
+    }
+.div-content ul{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 100px;
+    }
+.div-content img{
+    float: right;
+    }
+.div-content ul li{
+    font-size: 20px;
+    color: rgb(0, 0, 26);
     }
 }
